Changelog
=========

1.0b1 - Unreleased
------------------
- Highlighted current item in actions menu with the font color and boldness.
  [spliter]

1.0a4 - 2010-02-01
------------------
- Fix packaging issues.
  [esteele]

1.0a3 - 2010-02-01
------------------

- Register iefixes (css and js) in the proper resource registries,
  using the conditionalcomments property.  
  Refs http://dev.plone.org/plone/ticket/9278.  
  [dukebody]

- Move iefixes.js to this package, since we agreed
  upon that every theme should be responsible of its own fixes for IE.
  Refs http://dev.plone.org/plone/ticket/9278.
  [dukebody]

- Activate this skin in the Plone site upon installation.
  Fixes http://dev.plone.org/plone/ticket/10011.
  [dukebody]

- moved plone.css.py to CMFPlone - it doesn't belong to classic theme
  http://dev.plone.org/plone/ticket/9366
  [spliter]


1.0a2 - 2009-11-18
------------------

- Fix packaging error
  [esteele]


1.0a1 - 2009-11-18
------------------

- Prevent discussion form buttons from displaying in print view. Add byline
  info for comments in print view.
  http://dev.plone.org/plone/ticket/8460
  [naro]
  
- Add CSS support for JQueryTools popup forms
  [stevem]

- Initial release